--- a/about.html
+++ b/about.html
@@ -35,10 +35,6 @@
 
 <body class="main-layout inner_posituong computer_page">
    <!-- loader  -->
-   <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
    <!-- end loader -->
    <!-- header -->
    <header>
@@ -111,7 +107,7 @@
                   </p>
                </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-5">
                <div class="about_img">
                   <figure><img src="images/blue_logo_abt.png" alt="#" /></figure>
                </div>
@@ -122,17 +118,16 @@
    <div class="about">
       <div class="container">
          <div class="row d_flex">
-            <div class="col-md-5">
                <div class="titlepage">
                   <h3 style="text-align: center;"><b>Our Vision</b></h3>
-                  <p>Cost Efficiency, Quality Execution, On Time Completion Hassle Free Handover.</p>
+                  <p style="text-align: center;">Cost Efficiency, Quality Execution, On Time Completion Hassle Free Handover.</p>
                   <h3 style="text-align: center;"><b>Our Mission</b></h3>
-                  <p>World-Class Performance / Service. </p>
+                  <p style="text-align: center;">World-Class Performance / Service. </p>
                   <h3 style="text-align: center;"><b>Our Commitment</b></h3>
-                  <p>We develop relationship that make a positive difference in our customers growth in their business.
+                  <p style="text-align: center;">We develop relationship that make a positive difference in our customers growth in their business.
                   We uphold the highest standards of integrity in all our actions.</p>
                   <h3 style="text-align: center;"><b>Sector We Cater</b></h3>
-                  <p>- Plastic and Rubber Industries <br>
+                  <p style="text-align: center;">- Plastic and Rubber Industries <br>
                   - Chemical Industries <br>
                   - HVAC Industries <br>
                   - Hotel Industries <br>
@@ -142,15 +137,6 @@
                   - Etc where ever heat is required
                   </p>
                </div>
-            </div>
-            <div class="col-md-7">
-               <div class="about_img" style="padding-bottom: 20px;">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d589.7051183070749!2d72.86584594494627!3d19.404159060197262!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af005b0c7ca1%3A0x5c43c7052c9718b5!2sSMAJ%20Industries!5e0!3m2!1sen!2sin!4v1721984133903!5m2!1sen!2sin" width="600" height="350" style="border:#000000 solid 2px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-               </div>
-               <div class="about_img" style="padding-bottom: 35px;">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d409.5412725964498!2d72.84248312843498!3d19.12817320119776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b7fb8591c521%3A0x6fecdd21c3d1f878!2sSMAJ%20INDUSTRIES!5e0!3m2!1sen!2sin!4v1720781779911!5m2!1sen!2sin" width="600" height="350" style="border:#000000 solid 2px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-               </div>
-            </div>
          </div>
       </div>
    </div>
@@ -165,12 +151,11 @@
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                   <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                   <ul class="social_icon">
-                     <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook"
-                              aria-hidden="true"></i></a></li>
-                     <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                              aria-hidden="true"></i></a></li>
-                     <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                              aria-hidden="true"></i></a></li>
+                     <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+                     <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                              aria-hidden="true">Facebook</i></a></li> -->
+                     <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+                     <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
                   </ul>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -188,7 +173,7 @@
                         <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
                         Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
                         <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                        <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                        <strong>Email us on</strong> : admin@smajheaters.com<br>
                      </li>
                   </ul>
                </div>
