--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
-    
+
     <!-- Additional CSS Files -->
     <!-- <link rel="stylesheet" href="css/fontawesome.css"> -->
     <link rel="stylesheet" href="css/tooplate-main.css">
@@ -32,51 +32,48 @@
 </head>
 
 <body>
-    <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
     <header>
         <!-- header inner -->
         <div class="header">
             <div class="container-fluid">
-               <div class="row" style="background-color: rgb(30, 36, 38);">
-                  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                     <div class="full">
-                        <div class="center-desk">
-                           <div class="logo">
-                              <a href="index.html"><img src="pics/output-onlinepngtools.png" alt="#" /></a>
-                           </div>
+                <div class="row" style="background-color: rgb(30, 36, 38);">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                        <div class="full">
+                            <div class="center-desk">
+                                <div class="logo">
+                                    <a href="index.html"><img src="pics/output-onlinepngtools.png" alt="#" /></a>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                     <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-                           aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                           <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarsExample04">
-                           <ul class="navbar-nav mr-auto">
-                              <li class="nav-item">
-                                 <a class="nav-link" href="index.html">Home</a>
-                              </li>
-                              <li class="nav-item active">
-                                 <a class="nav-link" href="product.html">Products</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
-                              </li>
-                           </ul>
-                        </div>
-                     </nav>
-                  </div>
-               </div>
+                    </div>
+                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                        <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarsExample04">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="product.html">Products</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about.html">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="contact.html">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
             </div>
-         </div>
+        </div>
     </header>
 
     <!-- Page Content -->
@@ -97,16 +94,16 @@
                                     <img src="products\Brass Sleeve Heater\images/bs1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\images/bs2.jpg"/>
+                                    <img src="products\Brass Sleeve Heater\images/bs2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\images/bs3.png"/>
+                                    <img src="products\Brass Sleeve Heater\images/bs3.png" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\images/bs4.jpeg"/>
+                                    <img src="products\Brass Sleeve Heater\images/bs4.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\images/bs5.jpg"/>
+                                    <img src="products\Brass Sleeve Heater\images/bs5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -117,16 +114,16 @@
                                     <img src="products\Brass Sleeve Heater\pics/bs1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\pics/bs2.jpg"/>
+                                    <img src="products\Brass Sleeve Heater\pics/bs2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\pics/bs3.png"/>
+                                    <img src="products\Brass Sleeve Heater\pics/bs3.png" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\pics/bs4.jpeg"/>
+                                    <img src="products\Brass Sleeve Heater\pics/bs4.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="products\Brass Sleeve Heater\pics/bs5.jpg"/>
+                                    <img src="products\Brass Sleeve Heater\pics/bs5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -159,7 +156,8 @@
                             Potential for designing thin walled brass heaters to minimize OD impact<br>
                             Faster responding heater due to eliminated air pockets than cast in brass<br><br>
                             <strong>Application: </strong><br>
-                            Hot runner system heating of liquids, with tubes, heating of metals, with circular cross section.
+                            Hot runner system heating of liquids, with tubes, heating of metals, with circular cross
+                            section.
                         </p>
                         <!-- <form action="" method="get">
               <label for="quantity">Quantity:</label>
@@ -191,12 +189,11 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                         <ul class="social_icon">
-                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                                        class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+                            <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                              aria-hidden="true">Facebook</i></a></li> -->
+                            <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+                            <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -212,11 +209,11 @@
                         <ul class="conta">
                             <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
                                 Jogeshwari (W) Mumbai 400102<br>
-                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
-                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
                                 <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
-                             </li>
+                                <strong>Email us on</strong> : admin@smajheaters.com<br>
+                            </li>
                         </ul>
                     </div>
                 </div>
