--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -40,10 +40,6 @@
 </head>
 
 <body>
-    <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
     <header>
         <!-- header inner -->
         <div class="header">
@@ -108,7 +104,7 @@
                                 <li>
                                     <img src="products/Immersion Heater/images/ih2.jpg" />
                                 </li>
-                                
+
 
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -141,13 +137,20 @@
                             <strong>Specifications:</strong><br>
                             A wide selection of Watt Densities, Power Ratings, and Voltages.<br>
                             Brazed, Welded, or Removable elements. <br>
-                            Capillary Thermostats, multiple types of Thermocouples, RTDs, andhi-limit Thermostats available in a thermowell or strapped to the element sheath.<br>
-                            Terminal Enclosure choices include General Purpose (std.),Weather-Resistant, Explosion-Resistant, Economy and Extended Head with cooling fins for High-temperature Applications.<br>
-                            Can be supplied with Power Distribution zones for Multiple Circuits.Center core Baffles for increased velocity and staggered baffle plates available to increase turbulence for betterheat transfer<br><br>
+                            Capillary Thermostats, multiple types of Thermocouples, RTDs, andhi-limit Thermostats
+                            available in a thermowell or strapped to the element sheath.<br>
+                            Terminal Enclosure choices include General Purpose (std.),Weather-Resistant,
+                            Explosion-Resistant, Economy and Extended Head with cooling fins for High-temperature
+                            Applications.<br>
+                            Can be supplied with Power Distribution zones for Multiple Circuits.Center core Baffles for
+                            increased velocity and staggered baffle plates available to increase turbulence for
+                            betterheat transfer<br><br>
                             <strong>Tube Diameters:</strong><br>
-                            Tubular Immersion heaters are available in the following diameters. Tube dia : 8 mm, 11 mm, 14 mm, 17 mm, 19mm. Watt Density upto 60 w / Sq.in (9.3 w / Sq.cm)<br><br>
+                            Tubular Immersion heaters are available in the following diameters. Tube dia : 8 mm, 11 mm,
+                            14 mm, 17 mm, 19mm. Watt Density upto 60 w / Sq.in (9.3 w / Sq.cm)<br><br>
                             <strong>Mountings:</strong><br>
-                            Immersion heaters incorporate high quality tubular elements welded or brazed onto a wide range of mounting fittings. These mounting fittings include:<br>
+                            Immersion heaters incorporate high quality tubular elements welded or brazed onto a wide
+                            range of mounting fittings. These mounting fittings include:<br>
                             - Standard flanges<br>
                             - BSP and NPT threaded flanges - 1”BSP to 3” BSP<br>
                             Custom flanges, Screw plugs and other customfittings to suit the applications<br><br>
@@ -214,12 +217,11 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                         <ul class="social_icon">
-                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                                        class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+                            <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                              aria-hidden="true">Facebook</i></a></li> -->
+                            <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+                            <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -227,10 +229,10 @@
                         <ul class="about_us">
                             <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
                                 Jogeshwari (W) Mumbai 400102<br>
-                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
-                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
                                 <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                                <strong>Email us on</strong> : admin@smajheaters.com<br>
                             </li>
                         </ul>
                     </div>
