--- a/low_density_cartridge_heater.html
+++ b/low_density_cartridge_heater.html
@@ -40,10 +40,6 @@
 </head>
 
 <body>
-  <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
   <header>
     <!-- header inner -->
     <div class="header">
@@ -71,10 +67,10 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="product.html">Products</a>
-                 </li>
-                 <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
-                 </li>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
@@ -88,13 +84,13 @@
   </header>
 
   <!-- Page Content -->
-  <div class="single-product" style = "padding-bottom: 80px;">
+  <div class="single-product" style="padding-bottom: 80px;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
             <div class="line-dec"></div>
-            
+
           </div>
         </div>
         <div class="col-md-6">
@@ -126,21 +122,32 @@
         <div class="col-md-6">
           <div class="right-content">
             <h4>Low Density Cartridge Heater (LDC)</h4>
-            <p style = "text-align: justify;">
-              Low and Medium Density Cartridge Heater is developed for heating applications not requiring high watt densities and sheath temperatures not exceeding 300°C. These Cartridge Heating Elements are designed in maximum watt densities of 30 to 45 watts per square inch depending on applications. Such a Cartridge Heating Elements of various sheath diameters can be used in any assembly, equipment or machine.
-              The Low and Medium Density Cartridge Heater can be absolutely customized to suit customer's needs. Such Cartridge Heating Elements can be an economical option for customers not requiring high process temperatures. Cartridge Heating Elements are designed and calibrated perfectly to ensure that optimum conductivity between the resistance coil and the Cartridge Heater is achieved.
-              The Low and Medium Density Cartridge Heater design consists of a helically wound resistance coil made from nickel-chrome wire, evenly stretched and strung through holes in a round ceramic insulator. The element assembly is inserted into a Chrome Nickel Steel. This alloy provides the best combination of physical strength and resistance to heat oxidation up to 450°C
-              Specially selected grain size and high purity magnesium oxide is used to fill all remaining space inside the ceramic insulator to increase thermal conductivity, dielectric strength, and provide longer operating life of the Cartridge Heater.<br><br>
+            <p style="text-align: justify;">
+              Low and Medium Density Cartridge Heater is developed for heating applications not requiring high watt
+              densities and sheath temperatures not exceeding 300°C. These Cartridge Heating Elements are designed in
+              maximum watt densities of 30 to 45 watts per square inch depending on applications. Such a Cartridge
+              Heating Elements of various sheath diameters can be used in any assembly, equipment or machine.
+              The Low and Medium Density Cartridge Heater can be absolutely customized to suit customer's needs. Such
+              Cartridge Heating Elements can be an economical option for customers not requiring high process
+              temperatures. Cartridge Heating Elements are designed and calibrated perfectly to ensure that optimum
+              conductivity between the resistance coil and the Cartridge Heater is achieved.
+              The Low and Medium Density Cartridge Heater design consists of a helically wound resistance coil made from
+              nickel-chrome wire, evenly stretched and strung through holes in a round ceramic insulator. The element
+              assembly is inserted into a Chrome Nickel Steel. This alloy provides the best combination of physical
+              strength and resistance to heat oxidation up to 450°C
+              Specially selected grain size and high purity magnesium oxide is used to fill all remaining space inside
+              the ceramic insulator to increase thermal conductivity, dielectric strength, and provide longer operating
+              life of the Cartridge Heater.<br><br>
 
               <strong>Specifications:</strong><br>
-              Max. Surface Load   upto 35w in/sq2<br>
-              Wattage Tolerance ±10%	<br>
-              Insulation Resistance ≥ 5 MΩ at 500V (DC)	<br>
-              Standard Dia Range 8mm to 40mm	<br>
-              Diameter Tolerance	- 0.1mm	- <br>
-              Standard Length	Minimum 50mm<br>
-              Length Tolerance	± 1.5%, min ± 2mm<br>
-              Max. Sheath Temperature	400° C<br><br>
+              Max. Surface Load upto 35w in/sq2<br>
+              Wattage Tolerance ±10% <br>
+              Insulation Resistance ≥ 5 MΩ at 500V (DC) <br>
+              Standard Dia Range 8mm to 40mm <br>
+              Diameter Tolerance - 0.1mm - <br>
+              Standard Length Minimum 50mm<br>
+              Length Tolerance ± 1.5%, min ± 2mm<br>
+              Max. Sheath Temperature 400° C<br><br>
 
               <strong>Applications:</strong><br>
               Plastic extruders<br>
@@ -164,7 +171,7 @@
             </form> -->
             <div class="col-md-12" style="margin-left: -15px;">
               <a class="read_more" href="contact.html">Contact Us</a>
-           </div>
+            </div>
             <div class="down-content">
               <div class="categories">
                 <h6>Category: <span><a href="product.html">Heaters</a>
@@ -180,50 +187,49 @@
   <!-- Footer Starts Here -->
   <footer>
     <div class="footer">
-       <div class="container">
-          <div class="row">
-             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
-                <ul class="social_icon">
-                   <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook"
-                            aria-hidden="true"></i></a></li>
-                   <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                            aria-hidden="true"></i></a></li>
-                   <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                            aria-hidden="true"></i></a></li>
-                </ul>
-             </div>
-             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <h3>About Us</h3>
-                <ul class="about_us">
-                   <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation,
-                      client-centric approaches,<br> and timely delivery.</li>
-                </ul>
-             </div>
-             <div class="col-md-6 col-sm-6">
-                <h3>Contact Us</h3>
-                <ul class="conta">
-                  <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
-                    Jogeshwari (W) Mumbai 400102<br>
-                    <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
-                    Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
-                    <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                    <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
-                 </li>
-                </ul>
-             </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+            <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
+            <ul class="social_icon">
+              <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+              <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                           aria-hidden="true">Facebook</i></a></li> -->
+              <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+              <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
+            </ul>
           </div>
-          <div class="copyright">
-             <div class="container">
-                <div class="row">
-                   <div class="col-md-12">
-                      <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
-                   </div>
-                </div>
-             </div>
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+            <h3>About Us</h3>
+            <ul class="about_us">
+              <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation,
+                client-centric approaches,<br> and timely delivery.</li>
+            </ul>
           </div>
-       </div>
- </footer>
+          <div class="col-md-6 col-sm-6">
+            <h3>Contact Us</h3>
+            <ul class="conta">
+              <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                Jogeshwari (W) Mumbai 400102<br>
+                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
+                <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                <strong>Email us on</strong> : admin@smajheaters.com<br>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </footer>
   <!-- Footer Ends Here -->
 
 
