--- a/micro_coil_heater.html
+++ b/micro_coil_heater.html
@@ -40,10 +40,6 @@
 </head>
 
 <body>
-    <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
     <header>
         <!-- header inner -->
         <div class="header">
@@ -165,15 +161,15 @@
                             Coil Heater solves heating problems, where space is limited<br><br>
 
                             <strong>Specifications:</strong><br>
-                            Wattage	± 10 %<br>
-                            Max. Sheath Temperature	750 ° C / 1380 ° F<br>
-                            Insulation Resistance	≥ 5 MΏ at500V (DC)<br>
-                            Max. Straight Length	2000 mm<br>
-                            Sheath Material	Stainless steel<br>
+                            Wattage ± 10 %<br>
+                            Max. Sheath Temperature 750 ° C / 1380 ° F<br>
+                            Insulation Resistance ≥ 5 MΏ at500V (DC)<br>
+                            Max. Straight Length 2000 mm<br>
+                            Sheath Material Stainless steel<br>
                             Two standard tube diameters, 1.50 mm and 1.80mm <br>
                             Faster Heat Transfer with flat cross section tube (1.30mm x 2.30mm)<br>
-                            Max. Surface Load	4 W/sq. cm or 25 W/sq. inch<br>
-                            Min. Coiling ID	8 mm<br>
+                            Max. Surface Load 4 W/sq. cm or 25 W/sq. inch<br>
+                            Min. Coiling ID 8 mm<br>
                             Staggered cold leads<br><br>
 
                             <strong>Applications:</strong><br>
@@ -209,12 +205,11 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                         <ul class="social_icon">
-                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                                        class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+                            <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                              aria-hidden="true">Facebook</i></a></li> -->
+                            <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+                            <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -230,10 +225,10 @@
                         <ul class="conta">
                             <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
                                 Jogeshwari (W) Mumbai 400102<br>
-                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
-                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
                                 <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                                <strong>Email us on</strong> : admin@smajheaters.com<br>
                             </li>
                         </ul>
                     </div>
