--- a/power_saving_heater.html
+++ b/power_saving_heater.html
@@ -40,10 +40,6 @@
 </head>
 
 <body>
-  <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
   <header>
     <!-- header inner -->
     <div class="header">
@@ -71,10 +67,10 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="product.html">Products</a>
-                 </li>
-                 <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
-                 </li>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
@@ -94,7 +90,7 @@
         <div class="col-md-12">
           <div class="section-heading">
             <div class="line-dec"></div>
-            
+
           </div>
         </div>
         <div class="col-md-6">
@@ -126,8 +122,13 @@
         <div class="col-md-6">
           <div class="right-content">
             <h4>Power Saving Heater</h4>
-            <p style = "text-align: justify;">SMAJ’s specially designed and engineered the power saver heater to meet the ever increasing demand for energy conservation and to improve operations efficiency, capable of generating suitable temperature for processing resign with higher processing temperature. Energy Conservation is achieved by using thick Ceramic fiber insulating blanket on surface. 
-              Power consumption is reduced upto 30 percent because of low thermal conductivity of the ceramic fiber insulation. The external surface temperatures of the power saver band heaters are approximately 800 deg C <br><br>
+            <p style="text-align: justify;">SMAJ’s specially designed and engineered the power saver heater to meet the
+              ever increasing demand for energy conservation and to improve operations efficiency, capable of generating
+              suitable temperature for processing resign with higher processing temperature. Energy Conservation is
+              achieved by using thick Ceramic fiber insulating blanket on surface.
+              Power consumption is reduced upto 30 percent because of low thermal conductivity of the ceramic fiber
+              insulation. The external surface temperatures of the power saver band heaters are approximately 800 deg C
+              <br><br>
 
               <strong>Electrical Specifications:</strong><br>
               Resistance: +10% -5%<br>
@@ -142,11 +143,14 @@
               Width-normal: multiple of 20+1 name<br>
               Std. gap between edges: 5 to 10 mm<br><br>
 
-           <strong> Spiral Resistive Winding </strong> by nickel chrome 80/20 wire wide sectioned with resultant low level specific load.<br><br>
-            <strong>Insulation</strong>in high purity ceramic with high mechanical resistance, to the thermal shocks and high dielectric strength. <br><br>
-            <strong>Insulation Thickness </strong>1 inch, 2 inch, 3 inch and 4 inch 
-            <strong>Steel Terminal Box</strong> for high temperature working.
-            <strong>Casing</strong> by Stainless Steel / Aluminized Steel cover </p>
+              <strong> Spiral Resistive Winding </strong> by nickel chrome 80/20 wire wide sectioned with resultant low
+              level specific load.<br><br>
+              <strong>Insulation</strong>in high purity ceramic with high mechanical resistance, to the thermal shocks
+              and high dielectric strength. <br><br>
+              <strong>Insulation Thickness </strong>1 inch, 2 inch, 3 inch and 4 inch
+              <strong>Steel Terminal Box</strong> for high temperature working.
+              <strong>Casing</strong> by Stainless Steel / Aluminized Steel cover
+            </p>
             <!-- <form action="" method="get">
               <label for="quantity">Quantity:</label>
               <input name="quantity" type="quantity" class="quantity-text" id="quantity"
@@ -156,7 +160,7 @@
             </form> -->
             <div class="col-md-12" style="margin-left: -15px;">
               <a class="read_more" href="contact.html">Contact Us</a>
-           </div>
+            </div>
             <div class="down-content">
               <div class="categories">
                 <h6>Category: <span><a href="product.html">Heaters</a>
@@ -172,50 +176,49 @@
   <!-- Footer Starts Here -->
   <footer>
     <div class="footer">
-       <div class="container">
-          <div class="row">
-             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
-                <ul class="social_icon">
-                   <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook"
-                            aria-hidden="true"></i></a></li>
-                   <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
-                            aria-hidden="true"></i></a></li>
-                   <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
-                            aria-hidden="true"></i></a></li>
-                </ul>
-             </div>
-             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <h3>About Us</h3>
-                <ul class="about_us">
-                   <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation,
-                      client-centric approaches,<br> and timely delivery.</li>
-                </ul>
-             </div>
-             <div class="col-md-6 col-sm-6">
-                <h3>Contact Us</h3>
-                <ul class="conta">
-                  <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
-                    Jogeshwari (W) Mumbai 400102<br>
-                    <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
-                    Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
-                    <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                    <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
-                  </li>
-                </ul>
-             </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+            <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
+            <ul class="social_icon">
+              <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
+              <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                           aria-hidden="true">Facebook</i></a></li> -->
+              <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
+              <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
+            </ul>
           </div>
-          <div class="copyright">
-             <div class="container">
-                <div class="row">
-                   <div class="col-md-12">
-                      <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
-                   </div>
-                </div>
-             </div>
+          <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+            <h3>About Us</h3>
+            <ul class="about_us">
+              <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation,
+                client-centric approaches,<br> and timely delivery.</li>
+            </ul>
           </div>
-       </div>
- </footer>
+          <div class="col-md-6 col-sm-6">
+            <h3>Contact Us</h3>
+            <ul class="conta">
+              <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                Jogeshwari (W) Mumbai 400102<br>
+                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
+                <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                <strong>Email us on</strong> : admin@smajheaters.com<br>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </footer>
   <!-- Footer Ends Here -->
 
 
